Loan Drop down Loan type table Contents of loan type table

--- a/src/AccountPage.form
+++ b/src/AccountPage.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
@@ -261,15 +261,112 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="703" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="loanTypeCombo" max="32767" attributes="0"/>
+                                  <Component id="loanTypeLabel" pref="211" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="153" max="-2" attributes="0"/>
+                              <Component id="loanAmountLabel" min="-2" pref="218" max="-2" attributes="0"/>
+                              <EmptySpace pref="100" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="intrestLabel" alignment="0" pref="51" max="32767" attributes="0"/>
+                                  <Component id="yearsLabel" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="yearsValue" pref="104" max="32767" attributes="0"/>
+                                  <Component id="intrestAmount" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="requestLoan" min="-2" pref="250" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="268" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="loanTypeLabel" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                          <Component id="loanAmountLabel" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="loanTypeCombo" min="-2" pref="42" max="-2" attributes="0"/>
+                      <EmptySpace pref="49" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="intrestLabel" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="intrestAmount" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="requestLoan" min="-2" max="-2" attributes="0"/>
+                          <Component id="yearsValue" min="-2" pref="40" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                              <Component id="yearsLabel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
           </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JLabel" name="loanTypeLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Select Loan Type"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="loanTypeCombo">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="loanTypes" type="code"/>
+                </Property>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loanTypeComboActionPerformed"/>
+              </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
+            </Component>
+            <Component class="javax.swing.JLabel" name="loanAmountLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Select Loan Amount"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="yearsLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Years:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="intrestLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Intrest:"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="requestLoan">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Request Loan"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="requestLoanActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="intrestAmount">
+            </Component>
+            <Component class="javax.swing.JLabel" name="yearsValue">
+            </Component>
+          </SubComponents>
         </Container>
       </SubComponents>
     </Container>
